# Graph-Analytics-Engine

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
Graph Analytics Engine Base/: CMakeLists.txt  Project_Structure.txt  README.md  Testing.bash  newcode.hpp  workflow_ci.yml
Graph Analytics Engine Base/benchmarks/: benchmark_spfa.cpp
Graph Analytics Engine Base/include/algorithms/: concurrent_toposort.hpp  safe_flow.hpp  spfa_avx512.hpp
Graph Analytics Engine Base/include/baseline/: baseline_graph.hpp  baseline_spfa.hpp  baseline_toposort.hpp
Graph Analytics Engine Base/include/graphs/: csr_grpah.hpp  graph_builder.hpp  types.hpp
Graph Analytics Engine Base/include/utils/: aligned_allocator.hpp  lock_free_queue.hpp  thread_pool.hpp
Graph Analytics Engine Base/tests/: test_concurrent_toposort.cpp  test_csr_graph.cpp  test_safe_flow.cpp  test_spfa.cpp
Graph Analytics Engine Main/: CMakeLists.txt  Project_Structure.txt  README.md  codebase.hpp
Graph Analytics Engine Main/benchmarks/: CMakeLists.txt  benchmark_spfa.cpp
Graph Analytics Engine Main/include/baseline/: baseline_toposort.hpp
Graph Analytics Engine Main/include/graphs/: cycle_detector.hpp
Graph Analytics Engine Main/src/: cycle_detector.cpp
Graph Analytics Engine Main/tests/: CMakeLists.txt  test_concurrent_queue.cpp  test_cycle_detection.cpp  test_spfa.cpp
